	  input loop, and remove the apparently unnecessary wrefresh()
	  call. (David Benbennick)
	- Call setlocale() outside the ENABLE_NLS #ifdef, since UTF-8
	  support won't work properly if the locale isn't set, whether
	  NLS is enabled or not. (Junichi Uekawa)
	- Add titlebar() calls before all open_file() calls and remove 
	  the titlebar() call after them, so that the titlebar is 
	  displayed properly for all file(s) loaded. (DLR)
- nano.h:
	- Reassign the key for full justification to Ctrl-U, for
	  compatibility with the current version of Pico. (DLR)
	- Remove justbegend enum, as it's no longer needed. (DLR)
- proto.h:
	- Change the variables in the prototypes for do_justify(),
	  get_verbatim_kbinput(), and get_mouseinput() to match the ones
	  used in the actual functions. (DLR)
	- Remove unused declaration of temp_opt. (David Benbennick)
	- Add missing copy_file() prototype. (David Benbennick)
	- Move the load_history() and save_history() prototypes up to 
	  match their corresponding location in files.c. (DLR)
- rcfile.c:
  rcfile_msg()
	- Removed along with the related static int errors, and replaced
	  with calls to rcfile_error(). (David Benbennick)
	- Removed the reference to "starting nano" in the statusbar
	  message, as it may be called when we exit if the history file
	  can't be saved. (DLR)
  parse_rcfile()
	- Have whitespace display default to off instead of on. (Mike
	  Frysinger)
  nregcomp()
	- Rename the variable flags to eflags so as not to conflict with
	  the global flags. (DLR)
- search.c:
  do_replace_loop()
	- Make sure old_pww is updated to the current value of
	  placewewant when a new match is found, so that edit_redraw()
	  will redraw the screen properly when only placewewant changes.
	  (DLR, found by Mike Frysinger)
  do_replace()
	- Instead of using edit_update() to redraw the screen with
	  edittop at the top, set edittop beforehand and call
	  edit_refresh(). (DLR)
  do_gotoline()